# scp-protocol

./: .gitignore  README.md  mkdocs.yml  scp_specification.md
docs/: CNAME  cli-tools.md  implementation.md  index.md
docs/schemas/: page.json
examples/: blog-post.scp  rich-content.scp
reference-impl/: README.md  pyproject.toml
reference-impl/examples/: minimal-snapshot.scp
reference-impl/scp/: __init__.py  checksum.py  compression.py  exceptions.py  generator.py  parser.py  schema.py  sitemap.py
reference-impl/tests/: __init__.py  test_checksum.py  test_compression.py  test_generator.py  test_parser.py  test_roundtrip.py  test_schema.py
reference-impl/tools/: __init__.py  scp_benchmark.py  scp_inspector.py  scp_validator.py
schemas/: collection.json
