[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scp-protocol"
version = "0.1.0"
description = "Python reference implementation for Site Content Protocol"
readme = "README.md"
authors = [
    { name = "Vasiliy Kiryanov" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jsonschema>=4.0.0",
    "zstandard>=0.22.0",
    "lxml>=5.3.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.0",
    "lxml-stubs>=0.5.1",
    "types-jsonschema>=4.25.1.20251009",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
scp-validate = "tools.scp_validator:main"
scp-inspect = "tools.scp_inspector:main"
scp-benchmark = "tools.scp_benchmark:main"

[project.urls]
Homepage = "https://github.com/crawlcore/scp-protocol"
Repository = "https://github.com/crawlcore/scp-protocol"

[tool.setuptools.packages.find]
where = ["."]
include = ["scp*", "tools*"]

[tool.setuptools.package-data]
# Schemas are now at repository root (../schemas/)
# They are accessed via relative path at runtime

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=scp --cov-report=term-missing"